Fixed that the 'Drop files here' text gets square again on small browsers.

--- a/css/general.css
+++ b/css/general.css
@@ -1193,7 +1193,7 @@ h1#project {
   box-shadow: none;
 }
 @media screen and (max-width: 37.5em) {
-  .dropzone .default.message {
+  .dropzone .dz-default.dz-message {
     background-position: 0 -123px;
     width: 268px;
     margin-left: -134px;
